Refactor VisualBoard to the UI system
Introduce "EventAnimations", eventually unique ones will be tied to each
event
Replace many instances of "LinkedList" or "ArrayList" with just "List"
Make leaders separate from board objects
Todo:
- Implement proper board placement blocking queue
- Implement storing of state
- Move drawing of card to UICard
- Allow an event to have multiple animations depending on who created
the event
- Better AI
- Everything else
- An acceptance to the UW school of computer science